--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb902643a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f89c979c3d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb90229dcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb90229ded0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89c88bd8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89c88bdad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb902842710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb902842910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89c8e73250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89c8e73450&gt;]</pre>
 </div>
 
 </div>
