--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd90c3f1310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcac2bc3f10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd90c04cad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd90c04ccd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcac2578910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcac2578b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd90c5f3410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd90c5f3610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcac2b2b390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcac2b2b590&gt;]</pre>
 </div>
 
 </div>
