--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ce8f7d410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feaa507a750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ce8945910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ce8945b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fea7ba1e6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fea7ba41bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ce8ef81d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ce8ef83d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fea7bfea050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fea7bff5550&gt;]</pre>
 </div>
 
 </div>
