--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a7b1d9810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f50b69f1a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a7ae44b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a7ae44d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f50b66fb810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f50b66fba10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a7b3ea410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a7b3ea650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f50b6cb2210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f50b6cb2410&gt;]</pre>
 </div>
 
 </div>
