--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c9c002b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3db3edbbd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c9b9cfa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c9b9cfc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3db3b3db50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3db3b3dd50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c9bf74410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c9bf74610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3db40ea450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3db40ea650&gt;]</pre>
 </div>
 
 </div>
