--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdae41a6610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c7fd31490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdab9ed41d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdab9ed43d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c80014110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c80014310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdaba110bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdaba110dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c808aba50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c808abc50&gt;]</pre>
 </div>
 
 </div>
