--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70a24545d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe7dd488f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f70a2782210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f70a2782410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7dcb53150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7dcb68210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f70a2a1e3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f70a29cfd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7dd3ee8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7dd3eead0&gt;]</pre>
 </div>
 
 </div>
