--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f926ede5990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f085f52ff50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f926f0d38d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f926f0b9450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f085eefe1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f085eefe3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f926f9c0190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f926f951cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f085f797ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f085f797cd0&gt;]</pre>
 </div>
 
 </div>
