--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f085f52ff50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0145ed4e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f085eefe1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f085eefe3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0145fa3290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0145fa3490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f085f797ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f085f797cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f014683cc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f014683ce10&gt;]</pre>
 </div>
 
 </div>
