--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b5a81a2d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f431f7d8710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b5aaef090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b5aaef290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f431e6141d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f431e6143d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b5b388990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b5b388b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f431ee96a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f431ee96c50&gt;]</pre>
 </div>
 
 </div>
