--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4b83b3f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fad129b9790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4b7d9d290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4b7d9d490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad12ca7250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad12ca7450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4b8634b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4b8634d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad13531b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad13531d10&gt;]</pre>
 </div>
 
 </div>
