--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f520ad4dc10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4400527950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5209b84fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5209ba1210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4400807fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f44007fc310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f520a42c950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f520a42cb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f44010758d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f440107fbd0&gt;]</pre>
 </div>
 
 </div>
