--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc0f7fd9ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc85b84810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0f7cf8350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0f7cf8590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc85c13350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc85c13550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0f856ac50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0f856ae90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc864b0c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc864b0e50&gt;]</pre>
 </div>
 
 </div>
