--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f83648c6850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0d4f266a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f836497a150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f836497a350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d4e904290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d4e904490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f83651fca90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83651fcc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d4f185b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d4f185d90&gt;]</pre>
 </div>
 
 </div>
