--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f172f333dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdc51e90410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f172f04f2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f172f04f4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc51821390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc51821590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f172f8e7b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f172f8e7d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc5209ed10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc5209ef10&gt;]</pre>
 </div>
 
 </div>
