--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3d19559fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff85952bfd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d19645450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3d19645650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff859236250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff859236450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d19ebfc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3d19ebfe90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff859b08b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff859ad1d50&gt;]</pre>
 </div>
 
 </div>
