--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb0696b5290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff860597e10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb0699e0e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb0693cb5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff85fc4c390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff85fc4c590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb069c84f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb069c3be90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8604c6d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8604c6f10&gt;]</pre>
 </div>
 
 </div>
