--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd240c1e9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f327e270610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd23faff310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd23faff510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f327df3c210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f327df3c450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd240395c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd240395e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f327e7bfad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f327e7bfd10&gt;]</pre>
 </div>
 
 </div>
