--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22e195e790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7dd7af150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22e134f410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22e134f610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7dd4cc4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7dd4cc6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22e1bcbcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22e1bcbed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7ddd50dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7ddd50fd0&gt;]</pre>
 </div>
 
 </div>
