--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9c555aed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7288f50690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9c528d1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9c528d3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f728987e350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f728987e550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9c5b0eb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9c5b0ed90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7289acbc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7289acbe50&gt;]</pre>
 </div>
 
 </div>
