--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7288f50690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f89297a6b90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f728987e350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f728987e550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f892950e210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f892950e410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7289acbc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7289acbe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8929d81b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8929d81d50&gt;]</pre>
 </div>
 
 </div>
