--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6f68e97d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6521417710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6f6bf1310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd6f6bf1510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f65208ac290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f65208ac490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6f7463bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd6f7463dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6520af8b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6520af8d90&gt;]</pre>
 </div>
 
 </div>
