--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f55f345dc90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f566e846c10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f55f37bfe90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f55f37a7550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f566deda090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f566deda290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f55f39e97d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f55f39f2e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f566e759a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f566e759c10&gt;]</pre>
 </div>
 
 </div>
